[project]
name = "agent-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "langchain>=0.3.25",
    "langchain-core>=0.3.64",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.4.8",
    "langgraph-cli[inmem]>=0.3.3",
    "requests>=2.32.3",
    "streamlit>=1.45.1",
    "tqdm>=4.67.1",
]
